--- a/FicherosTFG/TFGPrincipal.tex
+++ b/FicherosTFG/TFGPrincipal.tex
@@ -7,6 +7,7 @@
 \documentclass[twoside,11pt]{TFGucaPDF}
 
 \usepackage[spanish]{babel}
+\usepackage{adjustbox}
 
 %: Fichero de macros para Latex
 \include{MacrosTFG}
