--- a/FicherosTFG/04SegundaParte.tex
+++ b/FicherosTFG/04SegundaParte.tex
@@ -93,7 +93,7 @@ A lo largo del trabajo hemos utilizado este último método, ya que nos permite co
 
 \section{Soluciones}
 \label{sec:soluciones}
-En esta sección comenzaremos ilustrando varias soluciones dependiendo de las condiciones iniciales. En toda la sección establecemos $c=440$, $L=1$ y $\mu=1$. Por lo tanto, los demás parámetros serán los indicados en cada una de las subsecciones.
+En esta sección comenzaremos ilustrando varias soluciones dependiendo de las condiciones iniciales. En toda la sección establecemos $c=440$, $L=1$ y $\mu=1$. Los demás parámetros serán los indicados en cada una de las subsecciones.
 
 
 \subsection{$f(x)= sin(\pi x)$, $g(x)=0$}
@@ -200,7 +200,7 @@ $$
 	\end{minipage}
 \end{figure}
 \newpage
-En este caso, si aumentamos el número de puntos del dominio espacial, los picos propios del punto no derivable irán desapareciendo. Lo ilustramos con tres imágenes en instantes similares, para $m=100$, $m=300$ y $m=400$, siempre con $L=1$ $\mu=1$ y $c=440$.
+En este caso, si aumentamos el número de puntos del dominio espacial, los ``picos'' propios del punto no derivable irán desapareciendo. Lo ilustramos con tres imágenes en instantes similares, para $m=100$, $m=300$ y $m=400$, siempre con $L=1$ $\mu=1$ y $c=440$.
 
 \begin{figure}[ht]
 	\centering
@@ -261,7 +261,7 @@ Se observa que, la onda respecto al tiempo, varía dependiendo de la posición de 
 
 \vspace{0.7 cm}
 
-En este caso partimos de una onda en reposo, con una velocidad inicial tipo Struck. A la derecha vemos una gráfica que representa la forma de la velocidad inicial.\\ 
+En este caso partimos de una cuerda en reposo, con una velocidad inicial tipo Struck. A la derecha vemos una gráfica que representa la forma de la velocidad inicial.\\ 
 
 
 La definición de la función $g$ es la siguiente:
@@ -338,8 +338,8 @@ En este caso, el movimiento se mantiene pero la solución es mucho más suave, sin
 	
 \end{wrapfigure}
 
-\vspace{0.5cm}
-Aún así, para los puntos del mallado, en los que se realiza la aproximación de la solución, el movimiento del mismo respecto al tiempo será prácticamente idéntico independientemente de si $m=50$ o $m=200$ y la diferencia en el audio indistinguible. Un ejemplo es el esquema de la derecha, hecho para $x=0.48$.\\
+\vspace{0.2cm}
+Para los puntos del mallado, ambas aproximaciones serán buenas y el movimiento de la onda en ellos prácticamente idéntico independientemente de si $m=50$ o $m=200$ y por lo tanto la diferencia en el audio indistinguible. La diferencia real entre ambos casos viene dada de la interpolación. Un ejemplo es el esquema de la derecha, hecho para $x=0.48$.\\
 
 
 
