--- a/FicherosTFG/00introduccion.tex
+++ b/FicherosTFG/00introduccion.tex
@@ -9,7 +9,7 @@ En la actualidad, los métodos numéricos nos brindan la oportunidad de aproximar 
 En este trabajo nos centraremos en la EDP de onda. Esta fue modelada por Jean le Rond d\textquotesingle Alembert en 1752, obteniendo soluciones de tipo onda viajeras, de manera similar a como lo realizaremos en nuestro estudio, siguiendo \citep{strauss}. Esto provocó que pocos años después, tanto D.Bernoulli, como  Leonhard Euler se interesasen en el estudio de las ondas acústicas. Este último utilizó lo que hoy conocemos como series de Fourier, para obtener una solución de la ecuación de onda. Más tarde, se descubriría que cualquier solución de d \textquotesingle Alembert, se podría construir como suma de soluciones de tipo Euler y viceversa. El siguiente artículo retrata algunas soluciones posibles \citep{AcercaDe}. \\
 
   
-A partir de entonces, se han realizado un gran despliegue de modelos relacionados con las ecuaciones de onda describir diversos fenómenos observables en la realidad. Podríamos destacar su uso en los campos de la sismica \citep{Seismic}, la acústica \citep{acoustics} y la óptica \citep{optics}, usando asiduamente los métodos numéricos para la aproximación de soluciones.\\
+A partir de entonces, se han realizado un gran despliegue de modelos relacionados con las ecuaciones de onda describiendo diversos fenómenos observables en la realidad. Podríamos destacar su uso en los campos de la sismica \citep{Seismic}, la acústica \citep{acoustics} y la óptica \citep{optics}, usando asiduamente los métodos numéricos para la aproximación de soluciones.\\
 
 La belleza del uso de aproximaciones numéricas es, que conforme la potencia de los dispositivos va incrementando, a la par que se investiga en métodos numétos más avanzados, las soluciones obtenidas, así como las gráficas y distintos tipos de archivos que podemos producir a partir de las mismas, mejorarán de forma significativa.\\
 
@@ -22,14 +22,14 @@ Nosotros nos centraremos en dar una visión general de la resolución de la ecuaci
 
 Abordaremos brevemente los sintetizadores numéricos, estos son dispositivos electrónicos que generan sonidos a través de la manipulación de señales numéricas. Ofrecen una amplia gama de posibilidades sonoras, como agregar efectos y simular instrumentos. En este trabajo realizaremos una simulación numérica de una cuerda tensada.  \\
 
-Esta memoria está estructurada de la siguiente forma: en el capítulo \ref{cha:preliminares} nos adentraremos en los conceptos previos necesarios para la comprensión del trabajo, como los Espacios de Lebesgue, el concepto de producto interior, o el mallado que utilizaremos para definir nuestro esquema numérico.\\
+Esta memoria está estructurada de la siguiente forma: en el capítulo \ref{cha:preliminares} nos adentraremos en los conceptos previos necesarios para la comprensión del trabajo, como los Espacios de Lebesgue, el concepto de producto escalar, o el mallado que utilizaremos para definir nuestro esquema numérico.\\
 
 En el capítulo siguiente, \ref{cha:Comenzamos}, introduciremos la ecuación de onda desde un marco físico y realizaremos una clasificación de la misma. Posteriormente nos centraremos en las soluciones de tipo onda viajera. Por último, analizaremos la energía de la ecuación.\\
 
 Una vez tenemos todos los cimientos construidos, en el capítulo \ref{cha:Diferenciasfinitas}, haremos uso de uno de los métodos más utilizados para la resolución numérica, el método de las diferencias finitas, para aproximar numéricamente la ecuación de ondas. Continuando el capítulo, analizaremos la consistencia y estabilidad de las aproximaciones obtenidas. Acabaremos trasladando tanto las soluciones de tipo onda viajera como la conservación de la energía al ámbito discreto.\\
 
 
-Concluiremos el grueso del trabajo, llevando a la práctica la teoría de los capítulos anteriores elaborando un script de Python, que nos permita computar las aproximaciones propuestas. Este se puede encontrar en el Anexo \ref{cha:Anexo} y en el repositorio de Github del trabajo  \href{https://github.com/Anain-27/Simulacion-numerica-de-ecuaciones-de-onda}{\textbf{Simulación numérica de ecuaciones de onda}}. En el capítulo \ref{cha:Comparativa}, compararemos las aproximaciones obtenidas desde distintos puntos de vista. Comprobaremos cuanto se aproximan a la solución exacta, y como se relacionan con las soluciones de tipo onda viajera obtenidas, variaremos ciertos parámetros para observar su implicación en la estabilidad de las aproximaciones, y sintetizaremos la onda, obteniendo  archivos de audio.\\
+Concluiremos el grueso del trabajo, llevando a la práctica la teoría de los capítulos anteriores elaborando un script de Python, esto nos permitirá computar las aproximaciones propuestas. Este se puede encontrar en el Anexo \ref{cha:Anexo} y en el repositorio de Github del trabajo  \href{https://github.com/Anain-27/Simulacion-numerica-de-ecuaciones-de-onda}{\textbf{Simulación numérica de ecuaciones de onda}}. En el capítulo \ref{cha:Comparativa}, compararemos las aproximaciones obtenidas desde distintos puntos de vista. Comprobaremos cuanto se aproximan a la solución exacta, y como se relacionan con las soluciones de tipo onda viajera obtenidas, variaremos ciertos parámetros para observar su implicación en la estabilidad de las aproximaciones, y sintetizaremos la onda, obteniendo  archivos de audio.\\
 
 
 Como cierre, en el apartado de conclusiones \ref{Conclusiones}, sintetizaremos los puntos mas importantes de este trabajo y presentaremos sugerencias para seguir explorando en esta área de estudio.
