Nuevas imagenes y Bemer

--- a/FicherosTFG/04SegundaParte.tex
+++ b/FicherosTFG/04SegundaParte.tex
@@ -30,7 +30,7 @@ Si tomamos como ejemplo una cuerda cuya posición inicial sea $f(x)= sin(2\pi x)$
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{2Seno1.png}
-		\caption{Posición inicial, de la cuerda, los puntos rojos se correspoden con los nodos.}
+		\caption{Posición inicial, de la cuerda, los puntos rojos se corresponden con los nodos.}
 		\label{fig:2Seno1}
 	\end{minipage}
 	\hfill
@@ -43,7 +43,7 @@ Si tomamos como ejemplo una cuerda cuya posición inicial sea $f(x)= sin(2\pi x)$
 \end{figure}
 
 \newpage
-Al encontrarnos en una onda estacionaria, $\lambda$  dependerá del largo de la cuerda, $L$, y del número de nodos que se presenten en la misma, $N$, de la siguiente forma $\lambda=\fra{2L}{N-1}$. Eligiendo $L=1$.\\
+Al encontrarnos en una onda estacionaria, $\lambda$  dependerá del largo de la cuerda, $L$, y del número de nodos que se presenten en la misma, $N$, de la siguiente forma $\lambda=\frac{2L}{N-1}$. Eligiendo $L=1$.\\
 
 Luego, si queremos obtener $\textbf{f}=440Hz$, frecuencia del La central, teniendo en cuenta $\lambda=\frac{2}{2}=1$, tendremos que elegir $c=\lambda \textbf{f}=1*440 = 440$.
 
@@ -70,7 +70,7 @@ En esta imagen se representa el movimiento de la onda respecto al tiempo,  en un
 Si utilizásemos de igual forma $c=440$ para la posición inicial $f(x)= sin(\pi x)$,
 
 \vspace{2.8cm}
-Ahora tendremos, $N=2$ y  $\lambda=\frac{2*L}{N-1}=2$, se sigue $\text{f}= \fra{440}{2}=220Hz$, por lo que el número de oscilaciones por segundo se reducirán a la mitad, siendo un La de 3ª octava. Lo ilustramos con la siguiente imagen, eligiendo los puntos adecuados, $x=0.5$ y $x=0.25$, para seno de $\pi x$, y seno de $2\pi x$, respectivamente. Observamos claramente que el número de oscilaciones se reduce a la mitad.
+Ahora tendremos, $N=2$ y  $\lambda=\frac{2*L}{N-1}=2$, se sigue $\text{f}= \frac{440}{2}=220Hz$, por lo que el número de oscilaciones por segundo se reducirán a la mitad, siendo un La de 3ª octava. Lo ilustramos con la siguiente imagen, eligiendo los puntos adecuados, $x=0.5$ y $x=0.25$, para seno de $\pi x$, y seno de $2\pi x$, respectivamente. Observamos claramente que el número de oscilaciones se reduce a la mitad.
 
 \begin{figure}[!ht]
 	\centering
